# rust-db

./: .env  Cargo.toml
migrations/2021-03-30-144155_create_post/: up.sql
src/: lib.rs
