[package]
name = "rust-db"
version = "0.1.0"
authors = ["mstanciu552 <mstanciu552@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.1", features = ["postgres"] }
dotenv = "0.15.0"
